Minimal working code + README setup guide + Application now launches successfully.